@@ -1,5 +1,10 @@
 2025-12-20  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* src/roff/groff/tests/pdf-device-smoke-test.sh: New file.
+	* src/roff/groff/groff.am (groff_TESTS): Run test.
+
+2025-12-20  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* src/roff/groff/tests/lj4-device-smoke-test.sh: New file.
 	* src/roff/groff/groff.am (groff_TESTS): Run test.
 
